added new contact page, some fixes to padding on other pages

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
               </div>
             <div class = row>
               <div class = "col-2">
-                  <div class="content with-margin">
+                  <!-- <div class="content with-margin"> -->
                   <image src = "assets/images/mypic.jfif" class="img-fluid" width="200px" height="200px" alt="pic"></image>
-                </div> <!--Margin div-->
+                <!-- </div> Margin div -->
               </div>
 
               <div class = "col-10"><!--about me text-->
