--- a/portfolio.html
+++ b/portfolio.html
@@ -63,12 +63,12 @@
             <div class ="grid">
               <div class="row"> <!--Row 1-->
                   <div class="col-4">
-                    <img src="assets/images/projectimage.jpg">
-                    <img src="assets/images/projectimage.jpg">                           
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">                          
                   </div>
                   <div class="col-4">
-                    <img src="assets/images/projectimage.jpg">
-                    <img src="assets/images/projectimage.jpg">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
                   </div>
                   <div class="col-4"></div>
 
@@ -76,44 +76,30 @@
 
               <div class="row">
                   <div class="col-4">
-                    <img src="assets/images/projectimage.jpg">
-                    <img src="assets/images/projectimage.jpg">                           
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">                          
                   </div>
                   <div class="col-4">
-                    <img src="assets/images/projectimage.jpg">
-                    <img src="assets/images/projectimage.jpg">                            
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">                           
                   </div>
                   <div class="col-4"></div>
               </div> <!--end Row 2-->
 
               <div class="row">
                   <div class="col-4">
-                    <img src="assets/images/projectimage.jpg">
-                    <img src="assets/images/projectimage.jpg">                            
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">>                            
                   </div>
                   <div class="col-4">
-                    <img src="assets/images/projectimage.jpg">
-                    <img src="assets/images/projectimage.jpg">                           
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <img src="assets/images/projectimage.jpg"class="img-fluid">                           
                     </div>
                     <div class="col-4"></div>
               </div> <!--end Row 3-->
             </div><!--End Grid Wrapper-->
                   
-              <!-- </div> -->
-
-              <!-- <div class = "col-10"><!--about me text-->
-                  <!-- <div class="content with-margin"> -->
-                    <!-- <p>
-                        Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. I can't get involved! I've got work to do! It's not that I like the Empire, I hate it, but there's nothing I can do about it right now. It's such a long way from here.
-                        Ye-ha! Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense
-                      </p>
-                    <p>
-                        What!? But with the blast shield down, I can't even see! How am I supposed to fight? Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense. 
-                    </p> --> -
-                  <!-- </div>Margin div -->
-              <!-- </div> about me text end col -->
-            <!-- </div>?? --> 
-          </div><!--End About Me wrapper-->
+           </div><!--End About Me wrapper-->
         </div><!--End About Me Section - Row 1-->
       <!-- </div> -->
      </div><!--End Main Section-->
