fixed column spacing for responsive

--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <title>Julie Gran Portfolio-Bootstrap Edition</title>
   <!-- Comment out each stylesheet to get the one you'd like to see -->
   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   
 </head>
 
 <body>
-    <div class="header-wrapper">
+    <!-- <div class="header-wrapper"> -->
       <!-- <div class="d-flex justify-content-between"> -->
-      <div id = "header">
+      <!-- <div id = "header"> -->
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ffffff;">
         <div id="name">
             <h1>Julie Gran</h1>
         </div>
           <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-        <div id="links"></div>
+        <!-- <div id="links"></div> -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
                 <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
@@ -37,15 +37,13 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li> -->
+              
             </ul>
           </div>
         </div><!--Links container-->
       </nav>
-      </div><!--end header-->
-    </div><!--end header-wrapper-->
+      <!-- </div>end header -->
+    <!-- </div>end header-wrapper -->
                 
     <div class = "content">
     <!-- <div class="content with-margin"> -->
@@ -56,18 +54,18 @@
             <div class="row justify-content-md-center"><!--Main Section-->
           <!-- <div id="aboutme-wrapper"> -->
            </div class = row><!--About Me Section-->
-              <div class ="col-12">
+              <div class ="col-lg-12">
                 <h2>About Me</h2>
                 <hr>
               </div>
             <div class = row>
-              <div class = "col-2">
+              <div class = "col-lg-2 col-6">
                   <!-- <div class="content with-margin"> -->
                   <image src = "assets/images/mypic.jfif" class="img-fluid" width="200px" height="200px" alt="pic"></image>
                 <!-- </div> Margin div -->
               </div>
 
-              <div class = "col-10"><!--about me text-->
+              <div class = "col-lg-10 col-6"><!--about me text-->
                   <!-- <div class="content with-margin"> -->
                     <p>
                         Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. I can't get involved! I've got work to do! It's not that I like the Empire, I hate it, but there's nothing I can do about it right now. It's such a long way from here.
