--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
                 </form>
                 
               </div>
-            </div>
+            </div> <!--End Row 2-->
              
               </div> <!--about me text end col-->
             </div><!--??-->
