--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
         <div id="aboutme-wrapper">
           
             <div class="row justify-content-md-center"><!--Main Section-->
-          <!-- <div id="aboutme-wrapper"> -->
+          <!-- <div id="aboutme-wrapper">  -->
            </div class = row><!--About Me Section-->
-              <div class ="col-lg-12">
+              <div class ="col-md 12 col-12">
                 <h2>About Me</h2>
                 <hr>
               </div>
             <div class = row>
-              <div class = "col-lg-2 col-6">
+              <div class = "col-md-2 col-12">
                   <!-- <div class="content with-margin"> -->
                   <image src = "assets/images/mypic.jfif" class="img-fluid" width="200px" height="200px" alt="pic"></image>
                 <!-- </div> Margin div -->
               </div>
 
-              <div class = "col-lg-10 col-6"><!--about me text-->
+              <div class = "col-md-10 col-12"><!--about me text-->
                   <!-- <div class="content with-margin"> -->
                     <p>
                         Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. I can't get involved! I've got work to do! It's not that I like the Empire, I hate it, but there's nothing I can do about it right now. It's such a long way from here.
@@ -74,13 +74,13 @@
                     <p>
                         What!? But with the blast shield down, I can't even see! How am I supposed to fight? Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense. 
                     </p>
-                  </div><!--Margin div-->
+                 <!-- </div><!Margin div-->
               </div> <!--about me text end col-->
-            </div><!--??-->
+            </div><!--end col 2-->
           </div><!--End About Me wrapper-->
         </div><!--End About Me Section-->
-      <!-- </div> -->
-     </div><!--End Main Section-->
+       <!-- </div>  -->
+     <!-- </div>End Main Section -->
 
         
         <!-- Begin Footer Row-->
@@ -88,7 +88,7 @@
           <div class="row justify-content-md-center" style="background-color: #666666;">
             <!-- <div class="footer"> -->
               <div class ="col-12">
-                    <p class="text-center" style= "color:white;">&copy;Copyright 2019 Julie Gran</p>
+                    <p class="text-center footer-block" style= "color:white;">&copy;Copyright 2019 Julie Gran</p>
                 </div>
             <!-- </div> -->
         </div><!--End footer-->
