added banners to portfolio pics

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         What!? But with the blast shield down, I can't even see! How am I supposed to fight? Kid, I've flown from one side of this galaxy to the other. I've seen a lot of strange stuff, but I've never seen anything to make me believe there's one all-powerful Force controlling everything. There's no mystical energy field that controls my destiny. It's all a lot of simple tricks and nonsense. 
                     </p>
                  <!-- </div><!Margin div-->
-              </div> <!--about me text end col-->
-            </div><!--end col 2-->
-          </div><!--End About Me wrapper-->
-        </div><!--End About Me Section-->
-       <!-- </div>  -->
+              </div> <!--about me text end col 2-->
+            </div><!--end row 2  -->
+          </div><!--End About Me Outer Row-->
+        </div><!--End About Me Wrapper Section-->
+       </div> 
      <!-- </div>End Main Section -->
 
         
