fixed column spacing on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,11 @@
                     <img src="assets/images/projectimage.jpg"class="img-fluid">
                     <p class="text-center">Project 7</p>                      
                   </div>
-                  <div class="col-4">
+                  <div class="col-md-4 col-12">
                     <img src="assets/images/projectimage.jpg"class="img-fluid">
                     <p class="text-center">Project 8</p>                     
                     </div>
-                    <div class="col-4"><img src="assets/images/projectimage.jpg"class="img-fluid">
+                    <div class="col-md-4 col-12"><img src="assets/images/projectimage.jpg"class="img-fluid">
                       <p class="text-center">Project 9</p>
                     </div>
               </div> <!--end Row 3-->
