--- a/contact.html
+++ b/contact.html
@@ -59,23 +59,32 @@
                 <hr>
               </div>
             <div class = row>
-              <div class = "col-lg-12 col-md 8">
+              <div class = "col-lg-12">
                 <form>
-                  <div class="form-group">
-                    <label for="emailName">Name</label>
-                    <input type="email" class="form-control" id="email-name" aria-describedby="emailHelp" placeholder="Julie Gran">
-                    <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                  <div class = "row justify-content-md-center col-12">
+                      <div class="form-group">
+                        <label for="emailName">Name</label>
+                        <input type="email" class="form-control" id="email-name" aria-describedby="emailHelp" placeholder="Julie Gran">
+                        <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                    </div>
                   </div>
-                  <div class="form-group">
-                      <label for="exampleInputEmail1">Email</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="julieg@myemail.com">
+                  <div class = "row justify-content-md-center col-12">
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="julieg@myemail.com">
+                    </div>
                   </div>
-                  <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  <div class = "row justify-content-md-center col-12">
+                    <div class="form-group">
+                      <label for="exampleFormControlTextarea1">Message</label>
+                      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
                   </div>
-                  <button type="submit" class="btn">Submit</button>
+                  <div class = "row justify-content-md-left col-12">
+                    <button type="submit" class="btn">Submit</button>
+                  </div>
                 </form>
+                <!-- </form> -->
                 
               </div>
             </div> <!--End Row 2-->
