fixed boostrap class to remove media for centering content

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       <!-- <div class = "content"> -->
         <div id="aboutme-wrapper">
           
-            <div class="row justify-content-md-center"><!--Main Section-->
+            <div class="row d-flex justify-content-center"><!--Main Section-->
           <!-- <div id="aboutme-wrapper"> -->
            </div class = row><!--About Me Section-->
               <div class ="col-12">
@@ -61,26 +61,26 @@
             <div class = row>
               <div class = "col-lg-12">
                 <form>
-                  <div class = "row justify-content-md-center col-12">
+                  <div class = "row d-flex justify-content-center col-12">
                       <div class="form-group">
                         <label for="emailName">Name</label>
                         <input type="email" class="form-control" id="email-name" aria-describedby="emailHelp" placeholder="Julie Gran">
                         <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                     </div>
                   </div>
-                  <div class = "row justify-content-md-center col-12">
+                  <div class = "row d-flex justify-content-center col-12">
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="julieg@myemail.com">
                     </div>
                   </div>
-                  <div class = "row justify-content-md-center col-12">
+                  <div class = "row d-flex justify-content-center col-12">
                     <div class="form-group">
                       <label for="exampleFormControlTextarea1">Message</label>
                       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
                   </div>
-                  <div class = "row justify-content-md-left col-12">
+                  <div class = "row d-flex justify-content-left col-12">
                     <button type="submit" class="btn">Submit</button>
                   </div>
                 </form>
