--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- <div class = "content"> -->
         <div id="aboutme-wrapper">
           
-            <div class="row justify-content-md-center"><!--Main Section-->
+            <div class="row d-flex justify-content-center"><!--Main Section-->
           <!-- <div id="aboutme-wrapper">  -->
            </div class = row><!--About Me Section-->
               <div class ="col-md 12 col-12">
@@ -85,7 +85,7 @@
         
         <!-- Begin Footer Row-->
         <div class="footer">
-          <div class="row justify-content-md-center" style="background-color: #666666;">
+          <div class="row d-flex justify-content-center" style="background-color: #666666;">
             <!-- <div class="footer"> -->
               <div class ="col-12">
                     <p class="text-center footer-block" style= "color:white;">&copy;Copyright 2019 Julie Gran</p>
