--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       <!-- <div class = "content"> -->
         <div id="aboutme-wrapper">
           
-            <div class="row justify-content-md-center"><!--Main Section-->
+            <div class="row d-flex justify-content-center"><!--Main Section-->
            <!-- <div id="aboutme-wrapper">  -->
            </div class = row><!--About Me Section  Row 1 - Col 1-->
               <div class ="col-12">
@@ -112,7 +112,7 @@
         
         <!-- Begin Footer Row-->
         <div class="footer">
-          <div class="row justify-content-md-center" style="background-color: #666666;">
+          <div class="row d-flex justify-content-center" style="background-color: #666666;">
             <!-- <div class="footer"> -->
               <div class ="col-12">
                     <p class="text-center" style= "color:white;">&copy;Copyright 2019 Julie Gran</p>
